@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+29-May-2004
+~~~~~~~~~~~
+Type specific Send To entries now shown for multiple files when they
+are all of the same type (Stephen Watson).
+Can now drag icons to the very end of the panel (Stephen Watson).
+
 28-May-2004
 ~~~~~~~~~~~
 Another place to look for apsymbols.h (Stephen Watson).
